--- a/projects/lightv-study/src/styles.scss
+++ b/projects/lightv-study/src/styles.scss
@@ -1,2 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+@use "styles/colors" as colors;
 @import "primeicons/primeicons.css";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Arial", sans-serif;
+  color: colors.$text-color;
+  margin: 0;
+  padding: 0;
+  line-height: 1.6;
+}
