handle sign in feature

--- a/projects/lightv-study/src/app/components/header/header.component.html
+++ b/projects/lightv-study/src/app/components/header/header.component.html
@@ -5,6 +5,7 @@
 			<li><a routerLink="/">Home</a></li>
 			<li><a routerLink="/courses" routerLinkActive="active">Courses</a></li>
 			<li><a routerLink="/user/login" routerLinkActive="active">Login</a></li>
+			<li><a routerLink="/user/me" routerLinkActive="active">My Account</a></li>
 		</ul>
 	</div>
 </nav>
