--- a/projects/lightv-study/src/app/pages/user/signin-page/signin-page.component.html
+++ b/projects/lightv-study/src/app/pages/user/signin-page/signin-page.component.html
@@ -2,21 +2,22 @@
 	<div class="container">
 		<div class="login-form">
 			<h2>Login to Your Account</h2>
-			<form>
+			<form [formGroup]="loginForm" (ngSubmit)="onSigninFormSubmit($event)">
 				<div class="form-group">
-					<label for="email">Email</label>
-					<input type="email" id="email" name="email" placeholder="Enter your email" required>
+					<label for="username">Username</label>
+					<input formControlName="username" type="text" id="username" name="username" placeholder="Enter your username">
 				</div>
 				<div class="form-group">
 					<label for="password">Password</label>
-					<input type="password" id="password" name="password" placeholder="Enter your password" required>
+					<input formControlName="password" type="password" id="password" name="password"
+						placeholder="Enter your password">
 				</div>
 				<button type="submit" class="btn">Login</button>
 			</form>
 			<div class="divider">
 				<span>or</span>
 			</div>
-			<button class="btn google-login">
+			<button class="btn google-login" (click)="onSiginWithGoogle()">
 				<i class="pi pi-google" style="color:red"></i>
 				Login with Google
 			</button>
