add basic global state

--- a/projects/lightv-study/src/app/pages/user/profile-page/profile-page.component.html
+++ b/projects/lightv-study/src/app/pages/user/profile-page/profile-page.component.html
@@ -18,6 +18,7 @@
     />
     <label for="email">Email</label>
   </p-iftalabel>
+  <p>Change your password</p>
   <p-iftalabel variant="on">
     <p-password
       id="currentPassword"
