--- a/projects/lightv-study/src/app/components/header/header.component.html
+++ b/projects/lightv-study/src/app/components/header/header.component.html
@@ -4,9 +4,12 @@
     <ul class="nav-links">
       <li><a routerLink="/">Home</a></li>
       <li><a routerLink="/courses" routerLinkActive="active">Courses</a></li>
-      <li><a routerLink="/user/login" routerLinkActive="active">Login</a></li>
+      @if (isSignedIn()) {
       <li><a routerLink="/user/me" routerLinkActive="active">My Account</a></li>
       <li><button (click)="onLogout()">Logout</button></li>
+      }@else {
+      <li><a routerLink="/user/login" routerLinkActive="active">Login</a></li>
+      }
     </ul>
   </div>
 </nav>
