--- a/projects/lightv-study/src/app/pages/user/profile-page/profile-page.component.html
+++ b/projects/lightv-study/src/app/pages/user/profile-page/profile-page.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="profileForm" class="profile-form" (ngSubmit)="onSubmit()">
+  @if(user && !user.socialProfileProvider){
   <p-iftalabel variant="on">
     <input
       pInputText
@@ -8,6 +9,7 @@
     />
     <label for="username">Username</label>
   </p-iftalabel>
+  }
   <p-iftalabel variant="on">
     <input
       pInputText
@@ -18,39 +20,46 @@
     />
     <label for="email">Email</label>
   </p-iftalabel>
-  <p>Change your password</p>
-  <p-iftalabel variant="on">
-    <p-password
-      id="currentPassword"
-      formControlName="currentPassword"
-      [feedback]="false"
-      [toggleMask]="true"
-    />
-    <label for="currentPassword">Current Password</label>
-  </p-iftalabel>
-  <p-iftalabel variant="on">
-    <p-password
-      id="newPassword"
-      formControlName="newPassword"
-      type="text"
-      [toggleMask]="true"
-      styleClass="w-100"
-    />
-    <label for="newPassword">New Password</label>
-  </p-iftalabel>
-  <p-iftalabel variant="on">
-    <p-password
-      id="confirmNewPassword"
-      formControlName="confirmNewPassword"
-      [feedback]="false"
-      [toggleMask]="true"
-    />
-    <label for="confirmNewPassword">Confirm New Password</label>
-  </p-iftalabel>
-  <div class="card flex justify-center">
-    <button pButton severity="success">
-      <i class="pi pi-user-edit"></i>
-      <span pButtonLabel>Update Information</span>
-    </button>
-  </div>
+  @if (user && !user.socialProfileProvider) {
+  <section>
+    <p>Change your password</p>
+    <p-iftalabel variant="on">
+      <p-password
+        id="currentPassword"
+        formControlName="currentPassword"
+        [feedback]="false"
+        [toggleMask]="true"
+      />
+      <label for="currentPassword">Current Password</label>
+    </p-iftalabel>
+    <p-iftalabel variant="on">
+      <p-password
+        id="newPassword"
+        formControlName="newPassword"
+        type="text"
+        [toggleMask]="true"
+      />
+      <label for="newPassword">New Password</label>
+    </p-iftalabel>
+    <p-iftalabel variant="on">
+      <p-password
+        id="confirmNewPassword"
+        formControlName="confirmNewPassword"
+        [feedback]="false"
+        [toggleMask]="true"
+      />
+      <label for="confirmNewPassword">Confirm New Password</label>
+    </p-iftalabel>
+    <div class="card flex justify-center">
+      <button pButton severity="success">
+        <i class="pi pi-user-edit"></i>
+        <span pButtonLabel>Update Information</span>
+      </button>
+    </div>
+  </section>
+  }@else {
+  <p>
+    You are connecting with {{ user && user.socialProfileProvider | uppercase }}
+  </p>
+  }
 </form>
