--- a/projects/lightv-study/src/app/components/header/header.component.scss
+++ b/projects/lightv-study/src/app/components/header/header.component.scss
@@ -20,6 +20,7 @@
   padding: 1rem 0;
   position: sticky;
   top: 0;
+  z-index: 1000;
   .logo {
     color: colors.$white;
     font-size: 1.5rem;
