--- a/projects/lightv-study/src/styles.scss
+++ b/projects/lightv-study/src/styles.scss
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+// @import "primeicons/primeicons.css";
 @use "styles/colors" as colors;
-@import "primeicons/primeicons.css";
+@use "primeicons/primeicons.css";
+@use "tailwindcss";
+@use "tailwindcss-primeui";
+@use "styles/sizes";
 
 * {
   margin: 0;
