--- a/projects/lightv-study/src/app/components/user-menu/user-menu.component.scss
+++ b/projects/lightv-study/src/app/components/user-menu/user-menu.component.scss
@@ -1,3 +1,5 @@
+$transition-time: 0.5s;
+
 .user-menu {
   position: fixed;
   top: 0;
@@ -7,11 +9,21 @@
   width: 250px;
   box-shadow: 0 0 10px white;
   border-left: 1px solid lightgray;
-  transition: transform 0.5s ease-in-out;
+  transition: transform $transition-time ease-in-out;
   background-color: #fff;
+}
+
+.toggle-menu-btn {
+  margin: 15px 15px;
+  transition: $transition-time ease-in-out;
 }
 
 .user-menu-hide {
   transform: translateX(100%);
   box-shadow: none;
+
+  .toggle-menu-btn {
+    margin-left: -40px !important;
+    padding-right: 30px;
+  }
 }
