--- a/projects/lightv-study/src/styles.scss
+++ b/projects/lightv-study/src/styles.scss
@@ -3,7 +3,7 @@
 @use "styles/colors" as colors;
 @use "primeicons/primeicons.css";
 @use "tailwindcss";
-@use "tailwindcss-primeui";
+// @use "tailwindcss-primeui";
 @use "styles/sizes";
 
 * {
